k8s/apps/proxmox-webui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxmox-webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxmox-webui
  template:
    metadata:
      labels:
        app: proxmox-webui
    spec:
      containers:
        - name: proxmox-webui
          image: nginx:1.25.3 # {"$imagepolicy": "default:proxmox-webui"}
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx
              readOnly: true
              name: proxmox-webui-conf
            - name: proxmox-cert
              mountPath: "/etc/pve/local"
              readOnly: true
            - mountPath: /var/log/nginx
              name: log
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 1m
              memory: 1Mi
      volumes:
        - name: proxmox-webui-conf
          configMap:
            name: proxmox-webui-conf
            items:
              - key: nginx.conf
                path: nginx.conf
              - key: virtualhost.conf
                path: virtualhost/virtualhost.conf
        - name: proxmox-cert
          secret:
            secretName: proxmox-cert
        - name: log
          emptyDir: {}
