k8s/apps/proxmox-webui/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: proxmox-webui
spec:
  selector:
    app: proxmox-webui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
