k8s/apps/proxmox-webui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox-webui
spec:
  ingressClassName: "nginx"
  rules:
    - host: "proxmox.walnuts.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxmox-webui
                port:
                  number: 80
